improve block resizing, select field from row control

--- a/src/blocks/ProfileBlockV2/view.scss
+++ b/src/blocks/ProfileBlockV2/view.scss
@@ -1,6 +1,24 @@
 
 .wp-block-govpack-profile-v2{
+
+	.profile-inner {
+		overflow:hidden;
+	}
+	/*
 	overflow:hidden;
+	&.aligncenter,
+	.aligncenter
+	&.alignleft, 
+	.alignleft, 
+	&.alignright,
+	.alignright {
+		display: table;
+	}
+		*/
+
+	.wp-block-post-featured-image {
+		overflow: hidden;
+	}
 }
 
 .gp-dim-field{
