improve the link outputting and normaise the row/group output

--- a/src/blocks/ProfileBlockV2/view.scss
+++ b/src/blocks/ProfileBlockV2/view.scss
@@ -1,6 +1,8 @@
 
 .wp-block-govpack-profile-v2{
 
+	width:100%;
+
 	.profile-inner {
 		overflow:hidden;
 	}
@@ -8,7 +10,7 @@
 	overflow:hidden;
 	&.aligncenter,
 	.aligncenter
-	&.alignleft, 
+	&.alignleft,  
 	.alignleft, 
 	&.alignright,
 	.alignright {
