--- a/src/blocks/ProfileBlockV2/view.scss
+++ b/src/blocks/ProfileBlockV2/view.scss
@@ -1,22 +1,11 @@
 
 .wp-block-govpack-profile-v2{
 
-	width:100%;
+	//width:100%;
 
 	.profile-inner {
-		overflow:hidden;
+		//overflow:hidden;
 	}
-	/*
-	overflow:hidden;
-	&.aligncenter,
-	.aligncenter
-	&.alignleft,  
-	.alignleft, 
-	&.alignright,
-	.alignright {
-		display: table;
-	}
-		*/
 
 	.wp-block-post-featured-image {
 		overflow: hidden;
