--- a/src/blocks/ProfileRowGroup/edit.scss
+++ b/src/blocks/ProfileRowGroup/edit.scss
@@ -1,5 +1,6 @@
-.wp-block-npe-profile{
-	.block-list-appender{
+
+.wp-block-npe-profile-row-group{
+	> .block-list-appender{
 		position:relative;
 		width:100%;
 	}
