--- a/src/blocks/Profile/editor.scss
+++ b/src/blocks/Profile/editor.scss
@@ -1,6 +1,6 @@
 
 .wp-block-npe-profile{
-	> .block-list-appender{
+	.profile-inner > .block-list-appender{
 		position:relative;
 		width:100%;
 	}
