filterable menu keeps shape and size when empty

--- a/src/components/Controls/ProfileField/view.scss
+++ b/src/components/Controls/ProfileField/view.scss
@@ -2,4 +2,10 @@
 	.components-menu-item__button *:has(mark){
 		white-space-collapse: preserve;
 	}
+
+	.components-popover__content{
+		width:100%;
+		max-width:250px;
+	}
 }
+
