--- a/src/blocks/LegacyProfile/view.scss
+++ b/src/blocks/LegacyProfile/view.scss
@@ -37,6 +37,7 @@
 		address {
 			width: 100%;
 			flex-grow: 1;
+			margin-bottom: 0.3rem;
 
             .alignright & {
                 text-align: right;
@@ -151,6 +152,7 @@
 
     }
 
+	
 	&__social_group{
 		display: flex;
 
@@ -164,13 +166,21 @@
         }
 	}
 
+	&__contact_group {
+		display: flex;
+		flex-wrap: wrap;
+		margin-right:0;
+	}
+
 	.editor-styles-wrapper &__contacts,
+	.editor-styles-wrapper &__contact,
 	.editor-styles-wrapper &__comms,
 	.editor-styles-wrapper &__social,
 
 	&__social,
 	&__comms,
-    &__contacts
+    &__contact,
+	&__contacts
 	{
 
 		ul{
@@ -233,6 +243,10 @@
                 display:none;
             }
         }
+
+		&_address{
+			width: 100%;
+		}
 
     }
 
