small legacy block contact display fix, improve profile icons

--- a/src/blocks/LegacyProfileSelf/view.scss
+++ b/src/blocks/LegacyProfileSelf/view.scss
@@ -144,6 +144,9 @@
                 display:block;
 				width:100%;
             }
+			svg, path {
+				fill : currentColor;
+			}
 
 			&--x svg{
 				margin-top:2px;
