--- a/src/blocks/LegacyProfile/view.scss
+++ b/src/blocks/LegacyProfile/view.scss
@@ -228,6 +228,10 @@
 				width:100%;
             }
 
+			svg, path {
+				fill : currentColor;
+			}
+
 			&--x svg{
 				max-width:18px;
                 max-height:18px;
