--- a/src/blocks/Profile/view.scss
+++ b/src/blocks/Profile/view.scss
@@ -10,23 +10,28 @@ body {
 	--npe-profile-color-yellow-tint: rgba(223, 168, 0, 0.05);
 
 	--npe-profile-default-border-radius: 8px;
-	--npe-profile-default-color-tint: rgba(0,0,0,0.05);
+	--npe-profile-default-color-tint: rgba(0,0,0,0,0);
 	--npe-profile-default-border-color: rgba(0,0,0,0.05);
-	--npe-profile-default-padding: 1rem;
+	--npe-profile-default-padding: 0.6rem;
+	--npe-profile-default-font-family: sans-serif;
 }
 
 .wp-block-npe-profile{
 
 	--npe-profile-contrast-color: var(--npe-profile-default-color);
 	--npe-profile-background-color: var(--npe-profile-default-color-tint);
+	--npe-profile-border-color: var(--npe-profile-default-color-tint);
 
 	min-height : 0px;
+	font-family: var(--npe-profile-default-font-family);
 	
 	.profile-inner {
 		background-color: var(--npe-profile-background-color);
 		border-radius: var(--npe-profile-default-border-radius);
 		overflow:hidden;
-	
+		&:not(.has-border-color){
+			border:1px solid var(--npe-npe-profile-border-color);
+		}
 	}
 
 	.wp-block-post-featured-image {
@@ -39,11 +44,7 @@ body {
 	.wp-block-npe-profile-row-group{
 		padding: var(--npe-profile-default-padding)
 	}
-	.wp-block-npe-profile-row-group.is-vertical{
-		gap: 0.2rem;
-		
-	}
-
+	
 	.wp-block-npe-profile-separator{
 		margin-block-start: 1rem;
 		margin-block-end: 1rem;
@@ -53,6 +54,8 @@ body {
 
 .wp-block-npe-profile {
 	
+	
+
 	&.is-style-red-tint{
 		--npe-profile-contrast-color: var(--npe-profile-color-red);
 		--npe-profile-background-color:var(--npe-profile-color-red-tint);
@@ -89,15 +92,17 @@ body {
 		.wp-block-npe-profile-name{
 			color : var(--npe-profile-contrast-color);
 		}
+
+		.profile-inner {
+			border: none;
+   		}
 	}
 
 	&.is-style-red-tint,
 	&.is-style-blue-tint,
 	&.is-style-yellow-tint {
 
-		.profile-inner {
-			border: 1px solid #cccccc;
-		}
+		
 		
 		.wp-block-npe-profile-name,
 		.wp-block-npe-profile-name:not(.has-link-color) a,
