--- a/src/blocks/ProfileFieldLink/view.scss
+++ b/src/blocks/ProfileFieldLink/view.scss
@@ -1,11 +1,32 @@
 .wp-block-npe-profile-field-link{
 	
+	&.is-format-icon{
+		
+		&.has-small-icon-size {
+			font-size: 16px; // 16 makes for a quarter-padding that keeps the icon centered.
+		}
+
+		// Normal/default.
+		&,
+		&.has-normal-icon-size {
+			font-size: 24px;
+		}
+
+		// Large.
+		&.has-large-icon-size {
+			font-size: 36px;
+		}
+
+		// Huge.
+		&.has-huge-icon-size {
+			font-size: 48px;
+		}
+	}
+
 	svg {
 		display: block;
-		width: 24px;
-		height: 24px;
-
-		
+		width: 1em;
+		height: 1em;
 	}
 
 	a {
