--- a/src/blocks/LegacyProfileSelf/view.scss
+++ b/src/blocks/LegacyProfileSelf/view.scss
@@ -4,6 +4,20 @@
 
     $block : &;
 	margin-bottom:1rem;
+	font-size: 1rem;
+
+	&__container{
+		border-radius: 8px;
+		overflow: hidden;
+		border: 1px solid #cccccc;
+	}
+
+	&__avatar {
+        width:100%;
+		aspect-ratio: 1/1;
+		overflow: hidden;
+    }
+	
 
     &__contacts ul,
     &__container {
@@ -19,8 +33,7 @@
         $element : &;
 
         flex-direction: column;
-		gap: 2rem;
-		
+
         &--right {
             flex-direction: row-reverse;
 
