--- a/src/blocks/Profile/view.scss
+++ b/src/blocks/Profile/view.scss
@@ -1,4 +1,4 @@
-
+/*
 body {
 
 	--npe-profile-color-red: rgb(201, 49, 53, 1);
@@ -16,7 +16,7 @@ body {
 	--npe-profile-default-font-family: sans-serif;
 }
 
-
+*/
 .wp-block-npe-profile{
 
 	--npe-profile-contrast-color: var(--npe-profile-default-color);
@@ -81,38 +81,9 @@ body {
 }
 
 
+
+
 .wp-block-npe-profile {
-	
-	
-
-	&.is-style-red-tint{
-		--npe-profile-contrast-color: var(--npe-profile-color-red);
-		--npe-profile-background-color:var(--npe-profile-color-red-tint);
-	}
-	&.is-style-blue-tint{
-		--npe-profile-contrast-color:var(--npe-profile-color-blue);
-		--npe-profile-background-color:var(--npe-profile-color-blue-tint);
-	}
-	&.is-style-yellow-tint{
-		--npe-profile-contrast-color:var(--npe-profile-color-yellow);
-		--npe-profile-background-color:var(--npe-profile-color-yellow-tint);
-	}
-
-	&.is-style-red{
-		--npe-profile-contrast-color:#fff;
-		--npe-profile-background-color:var(--npe-profile-color-red);
-	}
-
-	&.is-style-blue{
-		--npe-profile-contrast-color:#fff;
-		--npe-profile-background-color:var(--npe-profile-color-blue);
-	}
-
-	&.is-style-yellow{
-		--npe-profile-contrast-color:#fff;
-		--npe-profile-background-color: var(--npe-profile-color-yellow);
-	}
-
 	&.is-style-red,
 	&.is-style-blue,
 	&.is-style-yellow {
