white text on the solid background

--- a/src/blocks/LegacyProfile/view.scss
+++ b/src/blocks/LegacyProfile/view.scss
@@ -325,6 +325,9 @@
 	}
 
 	a,
+	&.is-style-red,
+	&.is-style-blue,
+	&.is-style-yellow,
 	.wp-block-govpack-profile__name,
 	.npe-profile-row__content--party {
 		color : var(--npe-profile-contrast-color, inherit)
