--- a/src/blocks/Profile/view.scss
+++ b/src/blocks/Profile/view.scss
@@ -17,7 +17,7 @@ body {
 }
 
 */
-.wp-block-npe-profile{
+.wp-block-npe-profile {
 
 	--npe-profile-contrast-color: var(--npe-profile-default-color);
 	--npe-profile-background-color: var(--npe-profile-default-color-tint);
@@ -26,84 +26,78 @@ body {
 	background-color: var(--npe-profile-background-color);
 	border-radius: var(--npe-profile-default-border-radius);
 
-	max-width:100%;
-	
-	overflow:hidden;
-	min-height : 0px;
-	font-family: var(--npe-profile-default-font-family);
-	
+	max-width: 100%;
 
-	&.is-layout-flex{
+	overflow: hidden;
+	min-height: 0;
+	font-family: var(--npe-profile-default-font-family);
+
+	&.is-layout-flex {
 		gap: 0;
 	}
-	
 
 	&.is-vertically-aligned-stretch,
 	&.is-vertically-aligned-stretch .profile-inner,
 	&.is-vertically-aligned-stretch .profile-inner.is-vertically-aligned-stretch {
 		align-self: stretch;
 		flex-grow: 1;
-		min-height:100%;
+		min-height: 100%;
 	}
 
-	
-
-	
 	.profile-inner {
-		width:100%;
-		&:not(.has-border-color){
-			border:1px solid var(--npe-profile-border-color);
+		width: 100%;
+
+		&:not(.has-border-color) {
+			border: 1px solid var(--npe-profile-border-color);
 		}
 	}
 
-	
+
 	.wp-block-post-featured-image {
 		overflow: hidden;
-		margin-bottom:0;
+		margin-bottom: 0;
+
 		img {
 			border-radius: revert;
 		}
 	}
 
-	.wp-block-npe-profile-row-group{
+	.wp-block-npe-profile-row-group {
 		padding: var(--npe-profile-default-padding);
 		gap: 0.2rem;
 	}
-	
-	.wp-block-npe-profile-name{
-		line-height:1.1;
+
+	.wp-block-npe-profile-name {
+		line-height: 1.1;
 	}
 
-	.wp-block-npe-profile-separator{
+	.wp-block-npe-profile-separator {
 		margin-block-start: 1rem;
 		margin-block-end: 1rem;
 	}
 }
 
-
-
-
 .wp-block-npe-profile {
+
 	&.is-style-red,
 	&.is-style-blue,
 	&.is-style-yellow {
-		color : var(--npe-profile-contrast-color);
+		color: var(--npe-profile-contrast-color);
 
-		.wp-block-npe-profile-name{
-			color : var(--npe-profile-contrast-color);
+		.wp-block-npe-profile-name {
+			color: var(--npe-profile-contrast-color);
 		}
 
 		.profile-inner {
 			border: none;
-   		}
+		}
 	}
 
 	&.is-style-red-tint,
 	&.is-style-blue-tint,
 	&.is-style-yellow-tint {
 
-		
-		
+
 		.wp-block-npe-profile-name,
 		.wp-block-npe-profile-name:not(.has-link-color) a,
 		.wp-block-npe-profile-field-link:not(.has-link-color) a,
@@ -112,13 +106,10 @@ body {
 		}
 
 		.wp-block-social-link.wp-social-link .wp-block-social-link-anchor svg,
-		svg:not(.has-icon-color svg){
+		svg:not(.has-icon-color svg) {
 			color: var(--npe-profile-contrast-color);
-			fill: var(--npe-profile-cocontrast-colorlor);
+			fill: var(--npe-profile-contrast-color);
 		}
 	}
 
-
-	
 }
-
