--- a/src/blocks/Profile/view.scss
+++ b/src/blocks/Profile/view.scss
@@ -92,8 +92,7 @@ body {
 			border: none;
 		}
 
-		.wp-block-social-link.wp-social-link .wp-block-social-link-anchor svg,
-		svg:not(.has-icon-color svg),
+		.wp-block-social-link.wp-social-link,
 		.is-format-icon a svg {
 			color: var(--npe-profile-contrast-color);
 			fill: var(--npe-profile-contrast-color);
