--- a/src/blocks/Profile/view.scss
+++ b/src/blocks/Profile/view.scss
@@ -9,6 +9,11 @@
 	min-height: 0;
 	font-family: var(--npe-profile-default-font-family);
 
+	@mixin icon-colors {
+		color: var(--npe-profile-contrast-color);
+		fill: var(--npe-profile-contrast-color);
+	}
+
 	&.is-layout-flex {
 		gap: 0;
 	}
@@ -65,10 +70,17 @@
 			border: none;
 		}
 
-		.wp-block-social-link.wp-social-link,
 		.is-format-icon a svg {
-			color: var(--npe-profile-contrast-color);
-			fill: var(--npe-profile-contrast-color);
+
+			@include icon-colors;
+		}
+
+		.wp-block-social-links.is-style-logos-only {
+
+			.wp-block-social-link.wp-social-link .wp-block-social-link-anchor {
+
+				@include icon-colors;
+			}
 		}
 	}
 
@@ -83,11 +95,12 @@
 			color: var(--npe-profile-contrast-color);
 		}
 
+		.wp-block-social-link.wp-social-link .wp-block-social-link-anchor,
 		.wp-block-social-link.wp-social-link .wp-block-social-link-anchor svg,
 		svg:not(.has-icon-color svg),
 		.is-format-icon a svg {
-			color: var(--npe-profile-contrast-color);
-			fill: var(--npe-profile-contrast-color);
+
+			@include icon-colors;
 		}
 	}
 }
